Bug 78230 - Fullscreen broken for xwayland apps
Summary: Fullscreen broken for xwayland apps
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-03 20:44 UTC by Axel Davy
Modified: 2014-05-04 21:14 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Axel Davy 2014-05-03 20:44:44 UTC
Bug present for some time. Still valid for weston master.

Any xwayland app going fullscreen doesn't get into fullscreen mode correctly:
it's not at position (0,0), and the shell bar at the top is above the app.

It's due to the shell set_fullscreen function, which doesn't actually apply fullscreen right away. some xdg_sell patches introduced this behaviour. For Xwayland, that means that fullscreen mode is never actually applied for the application.
Comment 1 Kristian Høgsberg 2014-05-04 21:14:59 UTC
commit 47792415165888676078eb3eb98ac4b97ba34140
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Sun May 4 13:47:06 2014 -0700

    xwayland: Fix fullscreen mode
    
    With xdg_shell wl_shell starting to diverge in how they work, there's
    less shared code in set_fullscreen().  The problem is that the xwayland
    window manager calls into set_fulscreen() which now doesn't complete
    the fullscreen transition.  Add shell_interface_set_fullscreen() for
    the shell interface set_fullscreen hook to use.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=78230


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.